syntax = "proto3";

package grpc_health_probe;
option go_package = "userProfile/pkg/grpc_health_probe";


message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  // Used only by the Watch method.
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
}
